# FOREMOST

./: .gitignore  README.md  annotation.py  annotation_v9.py  foremost.py  mkdocs.yml  pyproject.toml  requirements.txt  test_foremost.py
conf/: annotator.yaml  foremost.yaml
foremost/: __init__.py  annotator.py  core.py
foremost/conf/: annotator.yaml  foremost.yaml
input/: PEC_130.json  PEC_30.json  PEC_60.json  example_session_N30.json
outputs/: land_use_classify_accessible_N30.npy  land_use_classify_cost_N30.npy  land_use_classify_habitat_N30.npy  land_use_classify_restorable_N30.npy
outputs/FOREMOST_ANNOTATIONS/S01/exports/: LANDUSE_corrected_cost_N50.npy  LANDUSE_corrected_habitat_N50.npy  LANDUSE_corrected_restorable_N50.npy  LANDUSE_corrected_session_N50.json
outputs/FOREMOST_ANNOTATIONS/S02/exports/: LANDUSE_corrected_cost_N75.npy  LANDUSE_corrected_habitat_N75.npy  LANDUSE_corrected_restorable_N75.npy  LANDUSE_corrected_session_N75.json
outputs/FOREMOST_ANNOTATIONS/S03/exports/: LANDUSE_corrected_cost_N100.npy  (+2 more)
outputs/sessions/: N100_v2.json  N100_v3.json  N200_v1.json  N200_v2.json  N200_v3.json  N300_v2.json  N300_v3.json
qgis_plugin/: README.md
qgis_plugin/foremost_annotator/: __init__.py  annotation_tool.py  annotator_dock.py  auto_label_raster_dialog.py  auto_label_threshold_dialog.py  constants.py  cost_model.py  cost_params_dialog.py  foremost_annotator.py  grid_manager.py  metadata.txt  npy_exporter.py  optimization_settings_dialog.py  optimizer_runner_dialog.py  session_manager.py  solution_picker_dialog.py
site/: 404.html  index.html  objects.inv
site/api/: index.html
site/api/annotator/: index.html
site/api/core/: index.html
site/search/: search_index.json
site/usage/: index.html
tests/: conftest.py  test_builder.py  test_cost.py  test_indices.py  test_problem.py
(+28 files in other folders)
