[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foremost"
version = "0.1.0"
description = "FOrest Restoration with Evolutionary Multiobjective Optimization STrategies"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Laure Berti-Equille" }
]
keywords = ["ecology", "restoration", "optimization", "landscape", "multiobjective", "GIS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pillow>=12.1.1",
    "pymoo>=0.6.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "rasterio>=1.5.0",
    "geopandas>=1.1.3",
    "shapely>=2.1.2",
    "pyproj>=3.7.2",
    "pandas>=3.0.1",
    "rioxarray>=0.22.0",
    "scikit-image>=0.26.0",
    "osmnx>=2.1.0",
    "npyosmium>=4.2.0",
    "pyogrio>=0.12.1",
    "cma>=4.4.4",
    "moocore>=0.2.0",
    "alive-progress>=3.3.0",
    "pyyaml>=6.0.3",
    "click>=8.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
foremost = "foremost.core:main"
annotate = "foremost.annotator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["foremost*"]

[tool.setuptools.package-data]
foremost = ["conf/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
addopts = "-v --tb=short"
